--- a/clustermap.html
+++ b/clustermap.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: summary
 title: Clustermap
+description: Correlation matrix between all pairs of perturbations (reference and variant overexpression) sorted according to the hierarchical clustering of the rows and columns.
 ---
 <iframe src="{{"/corr-matrix.html" | relative_url}}" height="1200" width="1000" frameBorder="0"/>
