--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ title: Cell Painting predicts impact of lung cancer variants
 <h2>Cell Painting predicts impact of lung cancer variants</h2>
 <h6>Juan C. Caicedo, John Arevalo, Federica Piccioni, Mark-Anthony Bray,
 Cathy L. Hartland, Xiaoyun Wu, Angela N. Brooks, Alice H. Berger, Jesse S. Boehm, Anne E. Carpenter, Shantanu Singh</h6>
+<img class="right"
+     src="https://www.broadinstitute.org/files/news/media-images/logos/BroadInstLogoforDigitalRGB.png"
+     style="height: 57px; width: 225px;" />
 
 <h3>What is this about?</h3>
 <p class="flow-text">
@@ -46,7 +49,7 @@ project in a highly interactive way.
       found <a href="https://registry.opendata.aws/cell-painting-image-collection/">here</a>.</li>
   <li class="flow-text">This <a
           href="https://github.com/broadinstitute/luad-cell-painting">GitHub
-          repository</a>contains all the code and instructions to reproduce the
+          repository</a> contains all the code and instructions to reproduce the
   analysis presented here.</li>
 </ul>
 </p>
