Fix #4: Add biorxiv href

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ project in a highly interactive way.
 
 <h3>Resources</h3>
 <ul class="browser-default">
-  <li class="flow-text">Here is a <a href="#">link</a> to the preprint in bioRxiv with more
-      details of this study.</li>
+  <li class="flow-text">Here is a <a href="https://www.biorxiv.org/content/10.1101/2021.11.18.469171v1">link</a>
+      to the preprint in bioRxiv with more details of this study.</li>
   <li class="flow-text">The full Cell Painting image collection created for this project can be
       found <a href="https://registry.opendata.aws/cell-painting-image-collection/">here</a>.</li>
   <li class="flow-text">This <a
